--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Notes App",
     "short_name": "Notes",
-    "start_url": "index.html",
+    "start_url": "https://dman1991g.github.io/Note-app/index.html",
     "display": "standalone",
     "background_color": "#f4f4f4",
     "theme_color": "#ffffff",
